# handwritten_numbers_rust

./: Cargo.toml  python.py
src/: main.rs  rustify.rs
