[package]
name = "handwritten_numbers_rust"
version = "0.1.0"
authors = ["RockLikeBusStop <arasam1067@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
rand_distr = "0.2.2"
rand = "0.7.3"
cute = "0.3.0"